updated CHANGELOG and ensure become:

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,8 +3,10 @@
   service:
     name: chrony
     state: restarted
+  become: true
 
 - name: restart chronyd
   service:
     name: chronyd
     state: restarted
+  become: true
